--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,6 +1,8 @@
 dash-bootstrap-components~=2.0.4
 dash~=3.2.0
 dash_daq~=0.6.0
+diskcache~=5.6.3
+dash-extensions~=2.0.4
 pytz~=2025.2
 skyfield~=1.53
 requests~=2.32.5
